--- a/LOR MixMonster/Assets/Plugins/Android/mainTemplate.gradle
+++ b/LOR MixMonster/Assets/Plugins/Android/mainTemplate.gradle
@@ -11,25 +11,10 @@
             url (unityProjectPath + "/Assets/GeneratedLocalRepo/Firebase/m2repository") // Assets/Firebase/Editor/AnalyticsDependencies.xml:18, Assets/Firebase/Editor/AppDependencies.xml:22, Assets/Firebase/Editor/AuthDependencies.xml:20, Assets/Firebase/Editor/CrashlyticsDependencies.xml:20, Assets/Firebase/Editor/DatabaseDependencies.xml:22, Assets/Firebase/Editor/RemoteConfigDependencies.xml:20
         }
         maven {
-            url "https://maven.google.com/" // Assets/GoogleMobileAds/Editor/GoogleMobileAdsDependencies.xml:7, Assets/GoogleMobileAds/Editor/GoogleUmpDependencies.xml:7, Assets/GoogleMobileAdsNative/Editor/GoogleMobileAdsNativeDependencies.xml:7, Assets/IronSource/Editor/IronSourceSDKDependencies.xml:17, Assets/IronSource/Editor/IronSourceSDKDependencies.xml:25, Assets/IronSource/Editor/ISAdColonyAdapterDependencies.xml:8, Assets/IronSource/Editor/ISAdMobAdapterDependencies.xml:8, Assets/IronSource/Editor/ISAppLovinAdapterDependencies.xml:15, Assets/IronSource/Editor/ISAPSAdapterDependencies.xml:15, Assets/IronSource/Editor/ISFacebookAdapterDependencies.xml:8, Assets/IronSource/Editor/ISInMobiAdapterDependencies.xml:22, Assets/IronSource/Editor/ISMintegralAdapterDependencies.xml:40, Assets/IronSource/Editor/ISUnityAdsAdapterDependencies.xml:15
+            url "https://maven.google.com/" // Assets/GoogleMobileAds/Editor/GoogleMobileAdsDependencies.xml:7, Assets/GoogleMobileAds/Editor/GoogleUmpDependencies.xml:7, Assets/GoogleMobileAdsNative/Editor/GoogleMobileAdsNativeDependencies.xml:7, Assets/IronSource/Editor/IronSourceSDKDependencies.xml:17, Assets/IronSource/Editor/IronSourceSDKDependencies.xml:25
         }
         maven {
-            url "https://android-sdk.is.com/" // Assets/IronSource/Editor/IronSourceSDKDependencies.xml:9, Assets/IronSource/Editor/ISAdColonyAdapterDependencies.xml:16, Assets/IronSource/Editor/ISAdMobAdapterDependencies.xml:16, Assets/IronSource/Editor/ISAppLovinAdapterDependencies.xml:8, Assets/IronSource/Editor/ISAPSAdapterDependencies.xml:8, Assets/IronSource/Editor/ISFacebookAdapterDependencies.xml:16, Assets/IronSource/Editor/ISFyberAdapterDependencies.xml:16, Assets/IronSource/Editor/ISInMobiAdapterDependencies.xml:8, Assets/IronSource/Editor/ISMintegralAdapterDependencies.xml:48, Assets/IronSource/Editor/ISPangleAdapterDependencies.xml:8, Assets/IronSource/Editor/ISTapJoyAdapterDependencies.xml:8, Assets/IronSource/Editor/ISUnityAdsAdapterDependencies.xml:8, Assets/IronSource/Editor/ISVungleAdapterDependencies.xml:16, Assets/IronSourceAdQuality/Editor/IronSourceAdQualityDependencies.xml:9, Assets/IronSourceAdQuality/Editor/IronSourceAdQualityDependencies.xml:17
-        }
-        maven {
-            url "https://repo.maven.apache.org/maven2/" // Assets/IronSource/Editor/ISFyberAdapterDependencies.xml:8, Assets/IronSource/Editor/ISInMobiAdapterDependencies.xml:15
-        }
-        maven {
-            url "https://dl-maven-android.mintegral.com/repository/mbridge_android_sdk_oversea/" // Assets/IronSource/Editor/ISMintegralAdapterDependencies.xml:8, Assets/IronSource/Editor/ISMintegralAdapterDependencies.xml:16, Assets/IronSource/Editor/ISMintegralAdapterDependencies.xml:24, Assets/IronSource/Editor/ISMintegralAdapterDependencies.xml:32
-        }
-        maven {
-            url "https://artifact.bytedance.com/repository/pangle/" // Assets/IronSource/Editor/ISPangleAdapterDependencies.xml:15
-        }
-        maven {
-            url "https://sdk.tapjoy.com/" // Assets/IronSource/Editor/ISTapJoyAdapterDependencies.xml:15
-        }
-        maven {
-            url "https://jitpack.io/" // Assets/IronSource/Editor/ISVungleAdapterDependencies.xml:8
+            url "https://android-sdk.is.com/" // Assets/IronSource/Editor/IronSourceSDKDependencies.xml:9, Assets/IronSourceAdQuality/Editor/IronSourceAdQualityDependencies.xml:9, Assets/IronSourceAdQuality/Editor/IronSourceAdQualityDependencies.xml:17
         }
         mavenLocal()
         mavenCentral()
@@ -42,24 +27,16 @@ apply plugin: 'com.android.library'
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 // Android Resolver Dependencies Start
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0' // Assets/IronSource/Editor/ISInMobiAdapterDependencies.xml:22
-    implementation 'androidx.recyclerview:recyclerview:1.2.1' // Assets/IronSource/Editor/ISMintegralAdapterDependencies.xml:40
-    implementation 'com.adcolony:sdk:4.8.0' // Assets/IronSource/Editor/ISAdColonyAdapterDependencies.xml:8
-    implementation 'com.amazon.android:aps-sdk:9.8.+' // Assets/IronSource/Editor/ISAPSAdapterDependencies.xml:15
     implementation 'com.android.support:appcompat-v7:25.3.1' // Facebook.Unity.Editor.AndroidSupportLibraryResolver.addSupportLibraryDependency
     implementation 'com.android.support:cardview-v7:25.3.1' // Facebook.Unity.Editor.AndroidSupportLibraryResolver.addSupportLibraryDependency
     implementation 'com.android.support:customtabs:25.3.1' // Facebook.Unity.Editor.AndroidSupportLibraryResolver.addSupportLibraryDependency
     implementation 'com.android.support:support-v4:25.3.1' // Facebook.Unity.Editor.AndroidSupportLibraryResolver.addSupportLibraryDependency
-    implementation 'com.applovin:applovin-sdk:11.10.1' // Assets/IronSource/Editor/ISAppLovinAdapterDependencies.xml:15
-    implementation 'com.facebook.android:audience-network-sdk:6.16.0' // Assets/IronSource/Editor/ISFacebookAdapterDependencies.xml:8
     implementation 'com.facebook.android:facebook-applinks:[14.1, 15)' // Assets/FacebookSDK/Plugins/Editor/Dependencies.xml:6
     implementation 'com.facebook.android:facebook-core:[14.1, 15)' // Assets/FacebookSDK/Plugins/Editor/Dependencies.xml:5
     implementation 'com.facebook.android:facebook-gamingservices:[14.1, 15)' // Assets/FacebookSDK/Plugins/Editor/Dependencies.xml:9
     implementation 'com.facebook.android:facebook-login:[14.1, 15)' // Assets/FacebookSDK/Plugins/Editor/Dependencies.xml:7
     implementation 'com.facebook.android:facebook-share:[14.1, 15)' // Assets/FacebookSDK/Plugins/Editor/Dependencies.xml:8
-    implementation 'com.fyber:marketplace-sdk:8.2.4' // Assets/IronSource/Editor/ISFyberAdapterDependencies.xml:8
-    // implementation 'com.google.android.gms:play-services-ads:22.1.0' // Assets/GoogleMobileAds/Editor/GoogleMobileAdsDependencies.xml:7
-    implementation 'com.google.android.gms:play-services-ads:22.2.0' // Assets/IronSource/Editor/ISAdMobAdapterDependencies.xml:8
+    implementation 'com.google.android.gms:play-services-ads:22.1.0' // Assets/GoogleMobileAds/Editor/GoogleMobileAdsDependencies.xml:7
     implementation 'com.google.android.gms:play-services-ads-identifier:18.0.1' // Assets/IronSource/Editor/IronSourceSDKDependencies.xml:17
     implementation 'com.google.android.gms:play-services-base:18.2.0' // Assets/Firebase/Editor/DatabaseDependencies.xml:17
     implementation 'com.google.android.gms:play-services-basement:18.1.0' // Assets/IronSource/Editor/IronSourceSDKDependencies.xml:25
@@ -77,31 +54,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-crashlytics-unity:11.2.0' // Assets/Firebase/Editor/CrashlyticsDependencies.xml:20
     implementation 'com.google.firebase:firebase-database:20.2.2' // Assets/Firebase/Editor/DatabaseDependencies.xml:13
     implementation 'com.google.firebase:firebase-database-unity:11.2.0' // Assets/Firebase/Editor/DatabaseDependencies.xml:22
-    implementation 'com.inmobi.monetization:inmobi-ads-kotlin:10.5.9' // Assets/IronSource/Editor/ISInMobiAdapterDependencies.xml:15
-    implementation 'com.ironsource.adapters:adcolonyadapter:4.3.15' // Assets/IronSource/Editor/ISAdColonyAdapterDependencies.xml:16
-    implementation 'com.ironsource.adapters:admobadapter:4.3.39' // Assets/IronSource/Editor/ISAdMobAdapterDependencies.xml:16
-    implementation 'com.ironsource.adapters:applovinadapter:4.3.39' // Assets/IronSource/Editor/ISAppLovinAdapterDependencies.xml:8
-    implementation 'com.ironsource.adapters:apsadapter:4.3.9' // Assets/IronSource/Editor/ISAPSAdapterDependencies.xml:8
-    implementation 'com.ironsource.adapters:facebookadapter:4.3.45' // Assets/IronSource/Editor/ISFacebookAdapterDependencies.xml:16
-    implementation 'com.ironsource.adapters:fyberadapter:4.3.28' // Assets/IronSource/Editor/ISFyberAdapterDependencies.xml:16
-    implementation 'com.ironsource.adapters:inmobiadapter:4.3.19' // Assets/IronSource/Editor/ISInMobiAdapterDependencies.xml:8
-    implementation 'com.ironsource.adapters:mintegraladapter:4.3.19' // Assets/IronSource/Editor/ISMintegralAdapterDependencies.xml:48
-    implementation 'com.ironsource.adapters:pangleadapter:4.3.22' // Assets/IronSource/Editor/ISPangleAdapterDependencies.xml:8
-    implementation 'com.ironsource.adapters:tapjoyadapter:4.1.25' // Assets/IronSource/Editor/ISTapJoyAdapterDependencies.xml:8
-    implementation 'com.ironsource.adapters:unityadsadapter:4.3.33' // Assets/IronSource/Editor/ISUnityAdsAdapterDependencies.xml:8
-    implementation 'com.ironsource.adapters:vungleadapter:4.3.22' // Assets/IronSource/Editor/ISVungleAdapterDependencies.xml:16
     implementation 'com.ironsource.sdk:mediationsdk:7.4.0' // Assets/IronSource/Editor/IronSourceSDKDependencies.xml:9
     implementation 'com.ironsource.unity:adqualitysdk:7.14.2' // Assets/IronSourceAdQuality/Editor/IronSourceAdQualityDependencies.xml:17
     implementation 'com.ironsource:adqualitysdk:7.14.2' // Assets/IronSourceAdQuality/Editor/IronSourceAdQualityDependencies.xml:9
-    implementation 'com.mbridge.msdk.oversea:mbbanner:16.5.21' // Assets/IronSource/Editor/ISMintegralAdapterDependencies.xml:24
-    implementation 'com.mbridge.msdk.oversea:mbbid:16.5.21' // Assets/IronSource/Editor/ISMintegralAdapterDependencies.xml:32
-    implementation 'com.mbridge.msdk.oversea:newinterstitial:16.5.21' // Assets/IronSource/Editor/ISMintegralAdapterDependencies.xml:8
-    implementation 'com.mbridge.msdk.oversea:reward:16.5.21' // Assets/IronSource/Editor/ISMintegralAdapterDependencies.xml:16
-    implementation 'com.pangle.global:ads-sdk:5.5.0.5' // Assets/IronSource/Editor/ISPangleAdapterDependencies.xml:15
     implementation 'com.parse.bolts:bolts-android:1.4.0' // Assets/FacebookSDK/Plugins/Editor/Dependencies.xml:4
-    implementation 'com.tapjoy:tapjoy-android-sdk:13.0.1' // Assets/IronSource/Editor/ISTapJoyAdapterDependencies.xml:15
-    implementation 'com.unity3d.ads:unity-ads:4.9.1' // Assets/IronSource/Editor/ISUnityAdsAdapterDependencies.xml:15
-    implementation 'com.vungle:vungle-ads:7.0.0' // Assets/IronSource/Editor/ISVungleAdapterDependencies.xml:8
 // Android Resolver Dependencies End
 **DEPS**}
 
