--- a/LOR MixMonster/Assets/Plugins/Android/mainTemplate.gradle
+++ b/LOR MixMonster/Assets/Plugins/Android/mainTemplate.gradle
@@ -8,7 +8,7 @@
             url "https://maven.google.com"
         }
         maven {
-            url (unityProjectPath + "/Assets/GeneratedLocalRepo/Firebase/m2repository") // Assets/Firebase/Editor/AnalyticsDependencies.xml:18, Assets/Firebase/Editor/AppDependencies.xml:22, Assets/Firebase/Editor/CrashlyticsDependencies.xml:20, Assets/Firebase/Editor/RemoteConfigDependencies.xml:20
+            url (unityProjectPath + "/Assets/GeneratedLocalRepo/Firebase/m2repository") // Assets/Firebase/Editor/AnalyticsDependencies.xml:18, Assets/Firebase/Editor/AppDependencies.xml:22, Assets/Firebase/Editor/AuthDependencies.xml:20, Assets/Firebase/Editor/CrashlyticsDependencies.xml:20, Assets/Firebase/Editor/DatabaseDependencies.xml:22, Assets/Firebase/Editor/RemoteConfigDependencies.xml:20
         }
         maven {
             url "https://maven.google.com/" // Assets/GoogleMobileAds/Editor/GoogleMobileAdsDependencies.xml:7, Assets/GoogleMobileAds/Editor/GoogleUmpDependencies.xml:7, Assets/GoogleMobileAdsNative/Editor/GoogleMobileAdsNativeDependencies.xml:7, Assets/IronSource/Editor/IronSourceSDKDependencies.xml:17, Assets/IronSource/Editor/IronSourceSDKDependencies.xml:25, Assets/IronSource/Editor/ISAdColonyAdapterDependencies.xml:8, Assets/IronSource/Editor/ISAdMobAdapterDependencies.xml:8, Assets/IronSource/Editor/ISAppLovinAdapterDependencies.xml:15, Assets/IronSource/Editor/ISAPSAdapterDependencies.xml:15, Assets/IronSource/Editor/ISFacebookAdapterDependencies.xml:8, Assets/IronSource/Editor/ISInMobiAdapterDependencies.xml:22, Assets/IronSource/Editor/ISMintegralAdapterDependencies.xml:40, Assets/IronSource/Editor/ISUnityAdsAdapterDependencies.xml:15
@@ -58,21 +58,25 @@ dependencies {
     implementation 'com.facebook.android:facebook-login:[14.1, 15)' // Assets/FacebookSDK/Plugins/Editor/Dependencies.xml:7
     implementation 'com.facebook.android:facebook-share:[14.1, 15)' // Assets/FacebookSDK/Plugins/Editor/Dependencies.xml:8
     implementation 'com.fyber:marketplace-sdk:8.2.4' // Assets/IronSource/Editor/ISFyberAdapterDependencies.xml:8
-    // implementation 'com.google.android.gms:play-services-ads:22.1.0' // Assets/GoogleMobileAds/Editor/GoogleMobileAdsDependencies.xml:7
+    // implementation 'com.google.android.gms:play-services-ads:[22.3.0]' // Assets/GoogleMobileAds/Editor/GoogleMobileAdsDependencies.xml:7
     implementation 'com.google.android.gms:play-services-ads:22.2.0' // Assets/IronSource/Editor/ISAdMobAdapterDependencies.xml:8
     implementation 'com.google.android.gms:play-services-ads-identifier:18.0.1' // Assets/IronSource/Editor/IronSourceSDKDependencies.xml:17
-    implementation 'com.google.android.gms:play-services-base:18.2.0' // Assets/Firebase/Editor/AppDependencies.xml:17
+    implementation 'com.google.android.gms:play-services-base:18.2.0' // Assets/Firebase/Editor/DatabaseDependencies.xml:17
     implementation 'com.google.android.gms:play-services-basement:18.1.0' // Assets/IronSource/Editor/IronSourceSDKDependencies.xml:25
-    implementation 'com.google.android.ump:user-messaging-platform:2.0.0' // Assets/GoogleMobileAds/Editor/GoogleUmpDependencies.xml:7
+    implementation 'com.google.android.ump:user-messaging-platform:2.1.0' // Assets/GoogleMobileAds/Editor/GoogleUmpDependencies.xml:7
     implementation 'com.google.code.gson:gson:2.8.5' // Assets/GoogleMobileAdsNative/Editor/GoogleMobileAdsNativeDependencies.xml:7
     implementation 'com.google.firebase:firebase-analytics:21.3.0' // Assets/Firebase/Editor/RemoteConfigDependencies.xml:15
     implementation 'com.google.firebase:firebase-analytics-unity:11.2.0' // Assets/Firebase/Editor/AnalyticsDependencies.xml:18
     implementation 'com.google.firebase:firebase-app-unity:11.2.0' // Assets/Firebase/Editor/AppDependencies.xml:22
+    implementation 'com.google.firebase:firebase-auth:22.0.0' // Assets/Firebase/Editor/AuthDependencies.xml:13
+    implementation 'com.google.firebase:firebase-auth-unity:11.2.0' // Assets/Firebase/Editor/AuthDependencies.xml:20
     implementation 'com.google.firebase:firebase-common:20.3.3' // Assets/Firebase/Editor/AppDependencies.xml:13
     implementation 'com.google.firebase:firebase-config:21.4.0' // Assets/Firebase/Editor/RemoteConfigDependencies.xml:13
     implementation 'com.google.firebase:firebase-config-unity:11.2.0' // Assets/Firebase/Editor/RemoteConfigDependencies.xml:20
     implementation 'com.google.firebase:firebase-crashlytics-ndk:18.3.7' // Assets/Firebase/Editor/CrashlyticsDependencies.xml:13
     implementation 'com.google.firebase:firebase-crashlytics-unity:11.2.0' // Assets/Firebase/Editor/CrashlyticsDependencies.xml:20
+    implementation 'com.google.firebase:firebase-database:20.2.2' // Assets/Firebase/Editor/DatabaseDependencies.xml:13
+    implementation 'com.google.firebase:firebase-database-unity:11.2.0' // Assets/Firebase/Editor/DatabaseDependencies.xml:22
     implementation 'com.inmobi.monetization:inmobi-ads-kotlin:10.5.9' // Assets/IronSource/Editor/ISInMobiAdapterDependencies.xml:15
     implementation 'com.ironsource.adapters:adcolonyadapter:4.3.15' // Assets/IronSource/Editor/ISAdColonyAdapterDependencies.xml:16
     implementation 'com.ironsource.adapters:admobadapter:4.3.39' // Assets/IronSource/Editor/ISAdMobAdapterDependencies.xml:16
@@ -86,7 +90,7 @@ dependencies {
     implementation 'com.ironsource.adapters:tapjoyadapter:4.1.25' // Assets/IronSource/Editor/ISTapJoyAdapterDependencies.xml:8
     implementation 'com.ironsource.adapters:unityadsadapter:4.3.33' // Assets/IronSource/Editor/ISUnityAdsAdapterDependencies.xml:8
     implementation 'com.ironsource.adapters:vungleadapter:4.3.22' // Assets/IronSource/Editor/ISVungleAdapterDependencies.xml:16
-    implementation 'com.ironsource.sdk:mediationsdk:7.5.2' // Assets/IronSource/Editor/IronSourceSDKDependencies.xml:9
+    implementation 'com.ironsource.sdk:mediationsdk:7.6.1' // Assets/IronSource/Editor/IronSourceSDKDependencies.xml:9
     implementation 'com.ironsource.unity:adqualitysdk:7.14.2' // Assets/IronSourceAdQuality/Editor/IronSourceAdQualityDependencies.xml:17
     implementation 'com.ironsource:adqualitysdk:7.14.2' // Assets/IronSourceAdQuality/Editor/IronSourceAdQualityDependencies.xml:9
     implementation 'com.mbridge.msdk.oversea:mbbanner:16.5.21' // Assets/IronSource/Editor/ISMintegralAdapterDependencies.xml:24
@@ -104,6 +108,7 @@ dependencies {
 // Android Resolver Exclusions Start
 android {
   packagingOptions {
+      exclude ('/lib/arm64-v8a/*' + '*')
       exclude ('/lib/armeabi/*' + '*')
       exclude ('/lib/mips/*' + '*')
       exclude ('/lib/mips64/*' + '*')
