--- a/LOR MixMonster/Packages/manifest.json
+++ b/LOR MixMonster/Packages/manifest.json
@@ -11,6 +11,7 @@
     "com.unity.mobile.notifications": "2.2.0",
     "com.unity.nuget.newtonsoft-json": "3.2.1",
     "com.unity.purchasing": "4.10.0",
+    "com.unity.render-pipelines.universal": "12.1.12",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.6.5",
